# blink.cmp

./: .busted  .envrc  .gitignore  .luarc.json  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  LSP_TRACKER.md  Makefile  README.md  ROADMAP.md  _typos.toml  blink-cmp-scm-1.rockspec  blink.cmp-scm-1.rockspec  build-ffi-bindings.sh  build.rs  flake.nix  layout.lua  pokedex.json  repro.lua  rust-toolchain.toml  test.sh
lua/blink/cmp/: Cargo.toml  README.md  accept.lua  cmp.lua  commands.lua  config.lua  flake.nix  health.lua  highlights.lua  init.lua  keymap.lua  lsp.lua  test.lua  trigger.lua  types.lua  util.lua  utils.lua  win.lua
lua/blink/cmp/accept/: brackets.lua  init.lua  preview.lua  text-edits.lua
lua/blink/cmp/accept/brackets/: config.lua  init.lua  kind.lua  semantic.lua  utils.lua
lua/blink/cmp/completion/: init.lua  list.lua  prefetch.lua  trigger.lua
lua/blink/cmp/completion/accept/: init.lua  prefix.lua  preview.lua
lua/blink/cmp/completion/brackets/: config.lua  init.lua  kind.lua  semantic.lua  utils.lua
lua/blink/cmp/completion/trigger/: context.lua  init.lua  utils.lua
lua/blink/cmp/completion/windows/: documentation.lua  ghost_text.lua  menu.lua
lua/blink/cmp/config/: appearance.lua  documentation.lua  fuzzy.lua  init.lua  keymap.lua  shared.lua  signature.lua  snippets.lua  sources.lua  types_partial.lua  utils.lua
lua/blink/cmp/config/completion/: accept.lua  documentation.lua  ghost_text.lua  init.lua  keyword.lua  list.lua  menu.lua  trigger.lua  window.lua
lua/blink/cmp/config/modes/: cmdline.lua  term.lua  (+1 more)
lua/blink/cmp/docs/: lsp-support-tracker.md
lua/blink/cmp/events/: buffer.lua  cmdline.lua  term.lua
lua/blink/cmp/fuzzy/: Cargo.toml  build-lua.sh  build.rs  download.lua  error.rs  ffi.lua  ffi.rs  frecency.rs  fuzzy.rs  init.lua  keyword.rs  lib.lua  lib.rs  lsp_item.rs  rust.dylib  rust.lua  sort.lua  types.lua
lua/blink/cmp/keymap/: apply.lua  fallback.lua  init.lua  presets.lua
lua/blink/cmp/lib/: async.lua  buffer_events.lua  cmdline_events.lua  command_events.lua  config.lua  event_emitter.lua  state.lua  term_events.lua  text_edits.lua  utils.lua
lua/blink/cmp/lsp/: init.lua  server.lua  text_edit.lua  text_edits.lua
lua/blink/cmp/signature/: init.lua  list.lua  trigger.lua  window.lua
lua/blink/cmp/sources/: buffer.lua  complete_func.lua  dictionary.lua  init.lua  lsp.lua  luasnip.lua  mini_snippets.lua  nvim_cmp.lua  omni.lua  rg.lua  snippets.lua  types.lua
lua/blink/cmp/trigger/: completion.lua  signature.lua  types.lua
lua/blink/cmp/windows/: autocomplete.lua  documentation.lua  ghost-text-preview.lua  ghost-text.lua  lib.lua  signature.lua
(+218 files in other folders)
