[package]
name = "blink-cmp-fuzzy"
version = "0.1.0"
edition = "2021"

[lib]
path = "lua/blink/cmp/fuzzy/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
regex = "1.11.1"
frizbee = { version = "0.4.1", features = [], optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }
serde = { version = "1.0.216", features = ["derive"] }
heed = "0.21.0"
mlua = { version = "0.10.2", features = ["module", "luajit"] }
thiserror = "2.0.10"

[features]
default = ["arm_fuzzy"]
x86_fuzzy = ["dep:frizbee"]
arm_fuzzy = ["dep:fuzzy-matcher"]
