[package]
name = "blink-cmp-fuzzy"
version = "0.1.0"
edition = "2021"

[lib]
path = "lua/blink/cmp/fuzzy/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
regex = "1.11.1"
frizbee = "0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
heed = "0.21.0"
mlua = { version = "0.10.2", features = ["module", "luajit"] }
thiserror = "2.0.10"
blake3 = "1.8.2"
bincode = "1.3.3"
