[package]
name = "blink-cmp-fuzzy"
version = "0.1.0"
edition = "2021"

[lib]
path = "lua/blink/cmp/fuzzy/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
regex = "1.11.2"
frizbee = "0.6.0"
mlua = { version = "0.11.3", features = ["module", "luajit"] }
thiserror = "2.0.16"
blake3 = "1.8.2"
bincode = "2.0.1"
