[package]
name = "blink-fuzzy"
version = "0.1.0"
edition = "2021"

[net]
git-fetch-with-cli = true

[build-dependencies]
generator = { git = "https://github.com/distil/rust_lua_ffi" }

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.20"
c-marshalling = { git = "https://github.com/distil/rust_lua_ffi" }
lua-marshalling = { git = "https://github.com/distil/rust_lua_ffi" }
nucleo = "0.5.0"
regex = "1.10.5"
lazy_static = "1.5.0"
fzrs = { path = "/home/saghen/code/personal/fzrs" }
bincode = "1.3.3"
sled = "0.34.7"
serde = { version = "1.0.204", features = ["derive"] }
redb = "2.1.1"
heed = "0.20.3"
